# memsc

./: .gitignore  .gitmodules  CMakeLists.txt  ProcessMemory.cpp  ProcessMemory.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maps.cpp  maps.h  memorywidget.cpp  memorywidget.h  search_functions.cpp  search_functions.h  updater.h
.github/workflows/: cmake-ubuntu.yml  create-release.yml
packaging/: memsc.desktop.in
src/: CMakeLists.txt  ProcessMemory.h  mainwindow.cpp  maps.cpp  maps.h  perf.cpp  perf.h
src/ui/: Disassembly.cpp  Disassembly.h  MapsDialog.h  MatchTableItem.h  MemoryMonitor.h  PidDialog.h  Settings.cpp
ui/: MapsDialog.cpp  MapsDialog.h  MatchTableItem.h  PidDialog.cpp  Settings.cpp  Settings.h
